# terminal-codelearn

./: .bashrc  .gitignore  Gemfile  README.md  Rakefile  app.js  client.html  config.ru  index.html  load_test.js  package.json  run.py  server.js
app/assets/stylesheets/: terminals.css.scss
app/controllers/: terminals_controller.rb
app/views/terminals/: get.html.erb  index.html.erb
assets/js/: jquery-latest.js  jquery-ui-latest.js
benchmark/: multiple-clients.js  single-client.js
config/: environment.rb
config/environments/: development.rb  production.rb
demo-app/: Gemfile
demo-app/app/controllers/: .terminals_controller.rb.swp  terminals_controller.rb
demo-app/app/helpers/: terminals_helper.rb
demo-app/config/: application.rb  routes.rb
demo-app/config/environments/: test.rb
demo-app/config/initializers/: secret_token.rb  session_store.rb
demo-app/db/: development.sqlite3
demo-app/spec/requests/: multi_terminals_spec.rb
lib/: Config.js  HttpServer.js  SockJsServer.js  Terminal.js  active_users.rb  config.js  logger.js  mailer.js  main.js  mongo.js  process_incoming.rb  session.rb  sockjs_app.js  terminal_users.rb
mongo-stuff/: .testing-moped.rb.swp  README.md  start-mongo.sh  testing-moped.rb
public/: client.html  test_client.html
public/assets/: ansi_to_html.js  input-timer.js  terminal-client.js
selenium-test/: test.rb
session/: session.gemspec
session/lib/: .session.rb.swp  code_profiler.rb  session.rb
session/performance/: handle_request-flat.txt  handle_request-graph.txt
session/sample/: .reel-server.rb.swp  em-server.rb  reel-server.rb  test-blocking.rb  test-irb.rb  test.eye
session/test/: final.txt  initial.txt  reel-event-test.rb  shell-test.rb  test-sanitize.rb
spec/: spec_helper.rb
stress-tests/: apache2_2.2.22-1ubuntu1.2.dsc  multi-user-stress-test.rb  out.siege  urls.siege  user_1.urls  user_10.urls  user_2.urls  user_3.urls  user_4.urls  user_5.urls  user_6.urls  user_7.urls  user_8.urls  user_9.urls  wsesslog.nul  wsesslog.txt
stress-tests/apache2-2.2.22/: Makefile  Makefile.in  ab.c  acinclude.m4  config.layout  config.status  configure  configure.in  httpd  modules.c  modules.lo
stress-tests/apache2-2.2.22/.libs/: httpd
stress-tests/apache2-2.2.22/.pc/: applied-patches
stress-tests/apache2-2.2.22/debian/: NEWS  README.Debian  README.backtrace  README.multiple-instances  README.source  a2dismod.8  a2dissite.8  a2enmod  a2enmod.8  a2ensite.8  apache2-dbg.dirs  apache2-dbg.links  apache2-dbg.postinst  apache2-doc.conf  apache2-doc.dirs  apache2-doc.doc-base  apache2-doc.install  apache2-doc.postinst  apache2-prefork-dev.dirs  apache2-suexec-custom.dirs  apache2-suexec-custom.lintian-overrides  apache2-suexec-custom.manpages  apache2-suexec.install  apache2-suexec.lintian-overrides  apache2-threaded-dev.install  apache2-utils.install  apache2-utils.manpages  apache2.2-bin.dirs  apache2.2-bin.docs  apache2.2-common.apache2.cron.daily  apache2.2-common.apache2.default  apache2.2-common.apache2.init  apache2.2-common.apache2.logrotate  apache2.2-common.bug-control  apache2.2-common.bug-script  apache2.2-common.dirs  apache2.2-common.docs  apache2.2-common.examples  apache2.2-common.install  apache2.2-common.links  (+39 more)
stress-tests/apache2-2.2.22/include/: ap_config_auto.h  ap_config_layout.h  ap_config_layout.h.in
stress-tests/apache2-2.2.22/modules/: Makefile
stress-tests/apache2-2.2.22/os/: Makefile
stress-tests/apache2-2.2.22/server/: Makefile  config.c  config.lo  connection.lo  core.lo  core_filters.lo  eoc_bucket.lo  error_bucket.lo  export_files  export_vars.h  exports.c  exports.lo  gen_test_char  gen_test_char.lo  httpd.exp  libmain.la  listen.lo  log.lo  main.c  main.lo  mpm_common.lo  protocol.lo  provider.lo  request.lo  scoreboard.lo  util.lo  util_cfgtree.lo  util_charset.lo  util_debug.lo  util_ebcdic.lo  util_filter.lo  util_md5.lo  util_pcre.lo  util_script.lo  util_time.lo  util_xml.lo  vhost.lo
stress-tests/apache2-2.2.22/srclib/: Makefile
stress-tests/apache2-2.2.22/support/: Makefile  Makefile.in  ab  ab.c  ab.lo  apxs  apxs.in  checkgid  checkgid.lo  config.m4  dbmmanage  dbmmanage.in  envvars-std  envvars-std.in  htcacheclean  htcacheclean.lo  htdbm  htdbm.lo  htdigest  htdigest.lo  htpasswd  htpasswd.lo  httxt2dbm  httxt2dbm.lo  logresolve  logresolve.c  logresolve.lo  rotatelogs  rotatelogs.lo  suexec.c
stress-tests/siege-2.55/: AUTHORS  COPYING  ChangeLog  INSTALL  KNOWNBUGS  MACHINES  Makefile  Makefile.am  Makefile.in  NEWS  PLATFORM  README  README.https  README.solaris  acconfig.h  acinclude.m4  aclocal.m4  config.status  configure  configure.in  libtool
stress-tests/siege-2.55/doc/: Makefile  Makefile.am  Makefile.in  bombardment.1  layingsiege.1  siege.1  siege.config.1  siege2csv.1  siegerc  siegerc.in  urls.txt  urls_txt.1
stress-tests/siege-2.55/include/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in
stress-tests/siege-2.55/include/joedog/: Makefile  Makefile.am  Makefile.in  joedog.h  joepath.h
stress-tests/siege-2.55/lib/: Makefile  Makefile.am  Makefile.in
stress-tests/siege-2.55/lib/joedog/: Makefile  Makefile.am  Makefile.in  error.c  error.h  error.lo  libjoedog.la  memory.c  memory.h  memory.lo  perl.c  perl.h  perl.lo  snprintf.c  util.c  util.h  util.lo
stress-tests/siege-2.55/lib/joedog/.libs/: libjoedog.al  libjoedog.la
stress-tests/siege-2.55/src/: Makefile  Makefile.am  Makefile.in  cfg.c  cfg.h  client.c  client.h  cookie.c  cookie.h  getopt.c  handler.c  handler.h  http.c  http.h  init.c  init.h  load.c  load.h  log.c  log.h  main.c  setup.h  siege  sock.c  sock.h  ssl.c  ssl.h  timer.c  timer.h  url.c  url.h  util.c  util.h  version.c
stress-tests/siege-2.55/utils/: Makefile  Makefile.am  Makefile.in  bombardment  bombardment.in  mkinstalldirs  siege.config  siege.config.in  siege2csv.in  siege2csv.pl
test/: auto-complete.js  buttons.js  client.html  common.js  initialize-client.js  initialize-server.js  mailer.js  multi-user.js  process.js  reel-event-test.rb  test.js
test/functional/: terminals_controller_test.rb
(+520 files in other folders)
