##
## lib/joedog/Makefile.am
##
## Copyright (C) 2000, 2001, 2002 by
## Jeffrey Fulmer - <jdfulmer@armstrong.com>
## This file is distributed as part of Siege
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##

AUTOMAKE_OPTIONS     = foreign no-dependencies
 
noinst_LTLIBRARIES   = libjoedog.la 

libjoedog_la_LDFLAGS = -version-info 1:0:1

libjoedog_la_SOURCES = \
error.c    error.h     \
memory.c   memory.h    \
perl.c     perl.h      \
util.c     util.h      \
snprintf.c snprintf.h  

